# docassemble-yaml

./: .bumpversion.toml  .gitignore  .mise.toml  .taplo.toml  .tombi.toml  AGENTS.md  CHANGELOG.md  README.md  RELEASE.md  justfile  prek.toml  tsconfig.json
lsp/: .gitignore  .mise.toml  .taplo.toml  AGENTS.md  LICENSE  README.md  RELEASE_GATE.md  justfile  mod.just  prek.toml  pyproject.toml
lsp/docs/: ARCHITECTURE.md  FEATURE_PATTERNS.md  INVENTORY.md  ROADMAP.md  SUBAGENT_GUIDE.md
lsp/scripts/: update_vendored_docassemble_base_util.py
lsp/src/docassemble_lsp/: __init__.py  __main__.py  cli.py
lsp/src/docassemble_lsp/core/: __init__.py  accessibility.py  completion_context.py  completion_registry.py  completion_rules.py  definition_models.py  definitions.py  diagnostics.py  document_facts.py  document_links.py  field_keys.py  field_validators.py  files.py  fixes.py  formatting.py  indentation.py  jinja.py  line_helpers.py  logging.py  messages.py  python_modules.py  python_navigation.py  python_paths.py  schema.py  schema_insert_text.py  schema_models.py  schema_snippets.py  semantic_tokens.py  validation.py  validation_config.py  workspace.py  workspace_navigation.py  workspace_symbols.py  yaml_parsing.py  yaml_shared.py
lsp/src/docassemble_lsp/core/validation/: __init__.py  attachments.py  blocks.py  data.py  fields.py  list_collect.py  lists.py  orchestrator.py  review.py  table.py  visibility.py
lsp/src/docassemble_lsp/data/: vendored_docassemble_base_error.pyi  vendored_docassemble_base_functions.pyi  vendored_docassemble_base_util.pyi
lsp/src/docassemble_lsp/lsp/: __init__.py  server.py
lsp/tests/: __init__.py  corpus.py  test_cli.py  test_core_api.py  test_definitions.py  test_diagnostics.py  test_document_facts.py  test_formatting.py  test_inventory.py  test_lsp.py  test_lsp_process.py  test_python_modules.py  test_references_integration.py  test_schema.py  test_validation_public_surface.py  test_vendor_checker_cli.py  test_workspace.py  test_yaml_shared.py
lsp/tests/fixtures/demo_package/: pyproject.toml
lsp/tests/fixtures/demo_package/docassemble/demo/: __init__.py  workflow.py
lsp/tests/fixtures/demo_package/docassemble/demo/data/questions/: main.yml  x_events.yml  x_main_include.yml
lsp/tests/fixtures/examples/: daglobal.yml
lsp/tests/fixtures/reference_package/docassemble/demo/data/questions/: cross_ref.yml  main.yml  secondary.yml  shared.yml
lsp/tests/fixtures/reference_package/docassemble/demo/data/questions/content/: disclaimer.md
lsp/tests/fixtures/reference_package/docassemble/demo/data/questions/objects/: object-map.yml
lsp/tests/fixtures/reference_package/docassemble/demo/data/questions/templates/: letter.docx
lsp/tests/fixtures/regressions/: large_invalid_interview.yml  large_invalid_jinja_syntax.yml  large_invalid_jinja_template.yml  large_valid_interview.yml  large_warning_convention_interview.yml
scripts/: bump-lock.sh  update-changelog.mjs
vscode/: .bumpversion.toml  .gitignore  .mise.toml  .oxfmtrc.json  .taplo.toml  .vscodeignore  CHANGELOG.md  README.md  justfile  mod.just  package-lock.json  package.json  prek.toml  tsconfig.json
vscode/scripts/: bundle-server.mjs  real-lsp-smoke.mjs  update-changelog.mjs  vscode-test-wrapper.mjs  vscode-test-wrapper.sh
vscode/src/: extension.ts
vscode/src/test/: runTest.ts
vscode/src/test/fixtures/: mock-lsp-server.ts
vscode/src/test/suite/: config.test.ts  diagnostics.test.ts  extension.test.ts  index.ts  server-lifecycle.test.ts  test-utils.ts
vscode/syntaxes/: mako.tmLanguage.json  python-injection.json  yaml.tmLanguage.json
vscode/test-fixtures/: real-lsp-smoke.yml
